frontend/test/should_fail/index_edge_return_value_mismatch.grg
#using "index_edge_where_non_index_expected_model.gm"

function f(ref s:set<Node>) : int
{
	return(s.size());
}

rule i {
	if{ f(edgesFromIndex(fooi)) > 0; }
	
	modify {
	}
}
